tests/cases/errors/009_bare_string_in_object.nesl
<<<<<<<<<nesl
{
  key = R"""pv(valid)pv"""
  R"""pv(orphan string without assignment)pv"""
  another = R"""pv(ok)pv"""
}
=========nesl